feat: minimal data augmentation, just flips fo videos

--- a/src/cfg.yaml
+++ b/src/cfg.yaml
@@ -100,8 +100,8 @@ data:
   augmentation:
     offline:
       #Vision
-      horizontal_flip: 1.0 #Probability to do it.
-      vertical_flip: 0.0
+      horizontal_flip: 0.0 #Probability to do it.
+      vertical_flip: 1.0
       # jitter options
 
     online:
@@ -118,10 +118,10 @@ data:
     test: null
 
   annotations:
-    external_path: '/home/lara/Documents/tts/ansiedad-vision/mexican_anxiety_detection/data/raw/'
+    external_path: '/home/lara/Documents/tts/ansiedad-vision/DetaSet_Final_relabeling/DetaSet_Final/ventanasP2/'
     # external_path: '/home/lara/Documents/tts/ansiedad-vision/tmp_dataset/data/raw/'
 
-    full: 'data/raw/tmp.csv' #Path of csv file with all dataset information
+    full: 'data/raw/annotation_full.csv' #Path of csv file with all dataset information
     train: 'data/processed/train.csv'
     test: 'data/processed/test.csv'
     validation: 'data/processed/validation.csv'
